<?xml version="1.0"?>
<package format="2">
  <name>geture_interface</name>
  <version>0.1.0</version>
  <description>send help</description>

  <maintainer email="michel.dequick@student.vives.be">Michel Dequick</maintainer>
  <license>Don't know</license>
  <url type="git">https://github.com/MichelDequick/Gesture-Interface</url>
  <author email="michel.dequick@student.vives.be">Michel Dequick</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>